--- a/Homework/Homework 2.1.ipynb
+++ b/Homework/Homework 2.1.ipynb
@@ -30,7 +30,70 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "import matplotlib.animation as animation\n",
+    "#%matplotlib inline"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Set up an array of ux0\n",
+    "N = 100\n",
+    "L = 1\n",
+    "x = np.linspace(0, L, num=N + 1, endpoint=True)\n",
+    "Ux0 = 0\n",
+    "\n",
+    "# ensuring both ends are fixed at zero\n",
+    "Ux0[0] = 0\n",
+    "Ux0[N] = 0\n",
+    "\n",
+    "Uold = Ux0\n",
+    "# Set up initial condition for the time derivative at t = 0\n",
+    "dUx0 = np.zeros(101)\n",
+    "\n",
+    "dt = 0.0001 # Set up time step size\n",
+    "dh = L / N # Spatial step size\n",
+    "c = 100\n",
+    "omega = 10\n",
+    "eps = ((dt*c/dh)**2)\n",
+    "\n",
+    "# Calculate time step j = 1\n",
+    "Uxj = np.zeros(101)\n",
+    "for i in np.linspace(1, 99, 99, dtype=int):\n",
+    "    Uxj[i] = 0.5*eps*(Ux0[i+1] + Ux0[i-1]) + (1. - eps)*(Ux0[i]) + dt * dUx0[i]\n",
+    "\n",
+    "UAll = np.array([Uxj])\n",
+    "fig1 = plt.figure()\n",
+    "l = plt.plot(x, Uxj)\n",
+    "axes = plt.gca()\n",
+    "axes.set_ylim([-1,1])\n",
+    "\n",
+    "for j in range(200):\n",
+    "    Unew = np.zeros(101)\n",
+    "    \n",
+    "    for i in np.linspace(1, 99, 99, dtype=int):\n",
+    "        Unew[i] = eps*(Uxj[i+1] + Uxj[i-1]) + 2.*(1. - eps)*Uxj[i] - Uold[i]\n",
+    "    Uold =Uxj\n",
+    "    Uxj = Unew\n",
+    "    UAll = np.vstack([UAll, Unew])\n",
+    "    #if j > 30:\n",
+    "    #    plt.plot(x, Unew)\n",
+    "\n",
+    "        \n",
+    "def update_line(num, line):\n",
+    "    line.set_data(x, UAll[num])\n",
+    "    return line,\n",
+    "        \n",
+    "line_ani = animation.FuncAnimation(fig1, update_line, 200, fargs=(l), interval=20, blit=True)\n",
+    "line_ani.save('wave-in-string.mp4', fps=30, extra_args=['-vcodec', 'libx264'])\n",
+    "plt.show()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -68,7 +131,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -82,7 +145,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
