--- a/Homework/Homework 2.1.ipynb
+++ b/Homework/Homework 2.1.ipynb
@@ -69,14 +69,14 @@
     "dt = 0.01 # Set up time step size\n",
     "dh = L / N # Spatial step size\n",
     "c = 1\n",
-    "omega = 30\n",
+    "omega = 0.3\n",
     "eps = ((dt*c/dh)**2)\n",
     "\n",
     "# Calculate time step j = 1\n",
     "Uxj = np.zeros(101)\n",
     "for i in np.linspace(1, 99, 99, dtype=int):\n",
     "    Uxj[i] = 0.5*eps*(Ux0[i+1] + Ux0[i-1]) + (1. - eps)*(Ux0[i]) + dt * dUx0[i]\n",
-    "Uxj[0] = 2*np.sin(omega*1*dt)\n",
+    "Uxj[0] = 2*np.sin(omega*1)\n",
     "\n",
     "UAll = np.array([Uxj])\n",
     "fig1 = plt.figure()\n",
@@ -89,7 +89,7 @@
     "    Unew = np.zeros(101)\n",
     "    for i in np.linspace(1, 99, 99, dtype=int):\n",
     "        Unew[i] = eps*(Uxj[i+1] + Uxj[i-1]) + 2.*(1. - eps)*Uxj[i] - Uold[i]\n",
-    "    Unew[0] = 2*np.sin(omega*j*dt)\n",
+    "    Unew[0] = 2*np.sin(omega*j)\n",
     "    Unew[-1] = Uxj[-1] - c*(Uxj[-1] - Uxj[-2])\n",
     "    Uold = Uxj\n",
     "    Uxj = Unew\n",
