--- a/Homework/Homework 2.1.ipynb
+++ b/Homework/Homework 2.1.ipynb
@@ -39,7 +39,6 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
    "execution_count": 2,
    "metadata": {},
    "outputs": [
@@ -56,57 +55,33 @@
      "output_type": "display_data"
     }
    ],
-=======
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
->>>>>>> 365945a (add hw2.3)
    "source": [
     "# Set up an array of ux0\n",
     "N = 100\n",
     "L = 1\n",
     "x = np.linspace(0, L, num=N + 1, endpoint=True)\n",
-<<<<<<< HEAD
     "Ux0 = 0*x\n",
-=======
-    "Ux0 = 0\n",
-    "\n",
-    "# ensuring both ends are fixed at zero\n",
-    "Ux0[0] = 0\n",
-    "Ux0[N] = 0\n",
->>>>>>> 365945a (add hw2.3)
     "\n",
     "Uold = Ux0\n",
     "# Set up initial condition for the time derivative at t = 0\n",
     "dUx0 = np.zeros(101)\n",
     "\n",
-<<<<<<< HEAD
     "dt = 0.01 # Set up time step size\n",
     "dh = L / N # Spatial step size\n",
     "c = 1\n",
-    "omega = 30\n",
-=======
-    "dt = 0.0001 # Set up time step size\n",
-    "dh = L / N # Spatial step size\n",
-    "c = 100\n",
-    "omega = 10\n",
->>>>>>> 365945a (add hw2.3)
+    "omega = 0.3\n",
     "eps = ((dt*c/dh)**2)\n",
     "\n",
     "# Calculate time step j = 1\n",
     "Uxj = np.zeros(101)\n",
     "for i in np.linspace(1, 99, 99, dtype=int):\n",
     "    Uxj[i] = 0.5*eps*(Ux0[i+1] + Ux0[i-1]) + (1. - eps)*(Ux0[i]) + dt * dUx0[i]\n",
-<<<<<<< HEAD
-    "Uxj[0] = 2*np.sin(omega*1*dt)\n",
-=======
->>>>>>> 365945a (add hw2.3)
+    "Uxj[0] = 2*np.sin(omega*1)\n",
     "\n",
     "UAll = np.array([Uxj])\n",
     "fig1 = plt.figure()\n",
     "l = plt.plot(x, Uxj)\n",
     "axes = plt.gca()\n",
-<<<<<<< HEAD
     "axes.set_ylim([-3,3])\n",
     "axes.set_xlim([0,1])\n",
     "\n",
@@ -114,31 +89,14 @@
     "    Unew = np.zeros(101)\n",
     "    for i in np.linspace(1, 99, 99, dtype=int):\n",
     "        Unew[i] = eps*(Uxj[i+1] + Uxj[i-1]) + 2.*(1. - eps)*Uxj[i] - Uold[i]\n",
-<<<<<<< HEAD
-    "    Unew[0] = 2*np.sin(omega*j*dt)\n",
-    "    Unew[-1] = Uxj[-1] - c*(Uxj[-1] - Uxj[-2]) # open boundary equation for x = L\n",
-    "    Uold = Uxj \n",
-=======
-    "axes.set_ylim([-1,1])\n",
-    "\n",
-    "for j in range(200):\n",
-    "    Unew = np.zeros(101)\n",
-    "    \n",
-    "    for i in np.linspace(1, 99, 99, dtype=int):\n",
-    "        Unew[i] = eps*(Uxj[i+1] + Uxj[i-1]) + 2.*(1. - eps)*Uxj[i] - Uold[i]\n",
-    "    Uold =Uxj\n",
->>>>>>> 365945a (add hw2.3)
-=======
     "    Unew[0] = 2*np.sin(omega*j)\n",
     "    Unew[-1] = Uxj[-1] - c*(Uxj[-1] - Uxj[-2]) # open boundary equation for x = L\n",
     "    Uold = Uxj \n",
->>>>>>> c6ffd04 (add hw 2.1.2)
     "    Uxj = Unew\n",
     "    UAll = np.vstack([UAll, Unew])\n",
     "    #if j > 30:\n",
     "    #    plt.plot(x, Unew)\n",
     "\n",
-<<<<<<< HEAD
     "def update_line(num, line):\n",
     "    line.set_data(x, UAll[num])\n",
     "    return line,\n",
@@ -147,15 +105,6 @@
     "# line_ani.save('wave-in-string.mp4', fps=30, extra_args=['-vcodec', 'libx264'])\n",
     "writergif = animation.PillowWriter(fps=30)\n",
     "line_ani.save('wave-in-string.gif',writer=writergif)\n",
-=======
-    "        \n",
-    "def update_line(num, line):\n",
-    "    line.set_data(x, UAll[num])\n",
-    "    return line,\n",
-    "        \n",
-    "line_ani = animation.FuncAnimation(fig1, update_line, 200, fargs=(l), interval=20, blit=True)\n",
-    "line_ani.save('wave-in-string.mp4', fps=30, extra_args=['-vcodec', 'libx264'])\n",
->>>>>>> 365945a (add hw2.3)
     "plt.show()"
    ]
   },
@@ -241,11 +190,7 @@
     "dt = 0.01 # Set up time step size\n",
     "dh = L / N # Spatial step size\n",
     "c = 1\n",
-<<<<<<< HEAD
-    "omega = 30\n",
-=======
     "omega = 0.3\n",
->>>>>>> c6ffd04 (add hw 2.1.2)
     "k = 1\n",
     "eps = ((dt*c/dh)**2)\n",
     "ks = k*dt/2\n",
@@ -254,11 +199,7 @@
     "Uxj = np.zeros(101)\n",
     "for i in np.linspace(1, 99, 99, dtype=int):\n",
     "    Uxj[i] = 0.5*eps*(Ux0[i+1] + Ux0[i-1]) + (1. - eps)*(Ux0[i]) + dt * dUx0[i]\n",
-<<<<<<< HEAD
-    "Uxj[0] = 2*np.sin(omega*1*dt)\n",
-=======
     "Uxj[0] = 2*np.sin(omega*1)\n",
->>>>>>> c6ffd04 (add hw 2.1.2)
     "\n",
     "UAll = np.array([Uxj])\n",
     "fig1 = plt.figure()\n",
@@ -271,11 +212,7 @@
     "    Unew = np.zeros(101)\n",
     "    for i in np.linspace(1, 99, 99, dtype=int):\n",
     "        Unew[i] = (eps*(Uxj[i+1] + Uxj[i-1]) + 2.*(1. - eps)*Uxj[i] - (1. - ks)*Uold[i]) / (1. + ks)\n",
-<<<<<<< HEAD
-    "    Unew[0] = 2*np.sin(omega*j*dt)\n",
-=======
     "    Unew[0] = 2*np.sin(omega*j)\n",
->>>>>>> c6ffd04 (add hw 2.1.2)
     "    Unew[-1] = Uxj[-1] - c*(Uxj[-1] - Uxj[-2]) # open boundary equation for x = L\n",
     "    Uold = Uxj\n",
     "    Uxj = Unew\n",
@@ -318,39 +255,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-<<<<<<< HEAD
-<<<<<<< HEAD
-<<<<<<< HEAD
-<<<<<<< HEAD
-   "version": "3.9.7"
-=======
    "version": "3.8.8"
->>>>>>> a2c36af (add hw2.3)
-=======
-=======
->>>>>>> bbdf4ba (add hw2.3)
-=======
->>>>>>> gigadot-main
-   "version": "3.8.8"
-=======
-   "version": "3.9.7"
->>>>>>> 88eb7a8 (Updates)
-<<<<<<< HEAD
-<<<<<<< HEAD
->>>>>>> d737129 (Updates)
-=======
-=======
->>>>>>> gigadot-main
-=======
-   "version": "3.9.7"
-=======
-   "version": "3.8.8"
->>>>>>> a2c36af (add hw2.3)
->>>>>>> 365945a (add hw2.3)
-<<<<<<< HEAD
->>>>>>> bbdf4ba (add hw2.3)
-=======
->>>>>>> gigadot-main
   }
  },
  "nbformat": 4,
