--- a/Homework/Homework 3.2.ipynb
+++ b/Homework/Homework 3.2.ipynb
@@ -130,28 +130,28 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "<ipython-input-5-0a0428d07ceb>:1: IntegrationWarning: The maximum number of subdivisions (50) has been achieved.\n",
+      "<ipython-input-5-448ed15249d4>:1: IntegrationWarning: The maximum number of subdivisions (50) has been achieved.\n",
       "  If increasing the limit yields no improvement it is advised to analyze \n",
       "  the integrand in order to determine the difficulties.  If the position of a \n",
       "  local difficulty can be determined (singularity, discontinuity) one will \n",
       "  probably gain from splitting up the interval and calling the integrator \n",
       "  on the subranges.  Perhaps a special-purpose integrator should be used.\n",
-      "  y = [integrate.quad(lambda x: f(x)*tooth(t-x), -15, 15)[0] for t in x]\n",
-      "<ipython-input-5-0a0428d07ceb>:1: IntegrationWarning: The algorithm does not converge.  Roundoff error is detected\n",
+      "  y = [integrate.quad(lambda xx: f(xx)*tooth(t-xx), -15, 15)[0] for t in x]\n",
+      "<ipython-input-5-448ed15249d4>:1: IntegrationWarning: The algorithm does not converge.  Roundoff error is detected\n",
       "  in the extrapolation table.  It is assumed that the requested tolerance\n",
       "  cannot be achieved, and that the returned result (if full_output = 1) is \n",
       "  the best which can be obtained.\n",
-      "  y = [integrate.quad(lambda x: f(x)*tooth(t-x), -15, 15)[0] for t in x]\n"
+      "  y = [integrate.quad(lambda xx: f(xx)*tooth(t-xx), -15, 15)[0] for t in x]\n"
      ]
     }
    ],
    "source": [
-    "y = [integrate.quad(lambda x: f(x)*tooth(t-x), -15, 15)[0] for t in x]"
+    "y = [integrate.quad(lambda xx: f(xx)*tooth(t-xx), -15, 15)[0] for t in x]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "id": "ff9f66a5",
    "metadata": {},
    "outputs": [
