--- a/Homework/Homework 3.5.ipynb
+++ b/Homework/Homework 3.5.ipynb
@@ -49,7 +49,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7fc2d6862640>"
+       "<matplotlib.legend.Legend at 0x7fd23d084520>"
       ]
      },
      "execution_count": 2,
@@ -87,7 +87,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7fc2d73a1760>]"
+       "[<matplotlib.lines.Line2D at 0x7fd23dbc3820>]"
       ]
      },
      "execution_count": 3,
@@ -123,7 +123,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7fc2d913af10>]"
+       "[<matplotlib.lines.Line2D at 0x7fd23f94dcd0>]"
       ]
      },
      "execution_count": 4,
@@ -162,7 +162,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7fc2db4a7d00>]"
+       "[<matplotlib.lines.Line2D at 0x7fd241cbaa90>]"
       ]
      },
      "execution_count": 5,
@@ -195,7 +195,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7fc2dbf5f940>"
+       "<matplotlib.legend.Legend at 0x7fd2427736a0>"
       ]
      },
      "execution_count": 6,
