--- a/Homework/Homework 3.2.ipynb
+++ b/Homework/Homework 3.2.ipynb
@@ -183,9 +183,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "64ce49b1",
+   "metadata": {},
+   "source": [
+    "combine of two function f(x) and tooth(x) and the graph will look like two graphs combine together."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "31dda1a8",
+   "id": "72387b1f",
    "metadata": {},
    "outputs": [],
    "source": []
